Checks every minute for H:M (used to be hourly for H)

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ ANNOUNCEMENT_CHANNEL_ID = ANNOUNCEMENT_CHANNEL_ID HERE :int
 PING_ROLE_ID = PING_ROLE_ID HERE :int
 NOTIFY_DAY = NOTIFY_DAY HERE :int #Based on Python datetime function. monday = 0, tuesday = 1, etc
 NOTIFY_HOUR = NOTIFY_HOUR HERE :int #Based on 24-hr clock, 13 = 13:00/01:00 PM, etc
+NOTIFY_MINUTE = NOTIFY_MINUTE HERE :int #00-60 REQUIRES LEADING 0 IF <10 !
